se pushean los cambios faltantes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 		<section class="contenedor-info">
 			<h1>Nosotros..</h1>
-			<h2>Realizamos pintura artesanal sobre nuestros mates, dedicandoles mucho esfuerzo y dedicacion. Dibujamos todo tipos de logos, figuras o imagenes personalizadas.</h2>
+			<h2>Realizamos pintura <b>artesanal</b> sobre nuestros mates, dedicandoles mucho esfuerzo y dedicacion. Dibujamos todo tipos de logos, figuras o imagenes personalizadas.</h2>
 			<img src="./assets/feria.jpg" alt="Feria de mates">
 		</section>
 		<section class="contenedor-info-2">
@@ -37,9 +37,9 @@
 			</div>
 		</section>
 		<section class="contenedor-imgs">
-			<img src="./assets/mate-flor.jpg" alt="Mate con flor">
-			<img src="./assets/cuencos.jpg" alt="Cuencos">
-			<img src="./assets/mate-dibujo.jpg" alt="Mate con dibujo">
+			<img class="img1" src="./assets/mate-flor.jpg" alt="Mate con flor">
+			<img class="img2" src="./assets/cuencos.jpg" alt="Cuencos">
+			<img class="img3" src="./assets/mate-dibujo.jpg" alt="Mate con dibujo">
 		</section>
 	</main>
 	<footer>
