Se agregan datos para SEO y opengraph

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<title>Inicio</title>
+	<meta name="description" content="Pintura artesanal sobre mates. Dibujamos logos, figuras o imagenes personalizadas.">
+	<meta name="keywords" content="mates, artesanal, logos sobre mate, pintura sobre mate">
+
+	<meta property="og:title" content="Inicio">
+	<meta property="og:site_name" content="A-Mates">
+	<meta property="og:url" content="https://ezeledesma.github.io/proyecto-desarrolloweb/">
+	<meta property="og:description" content="Pintura artesanal sobre mates. Dibujamos logos, figuras o imagenes personalizadas.">
+
+	<title>A-Mates</title>
+
 	<link rel="stylesheet" href="./css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
