--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Contacto</title>
+	<meta name="description" content="Dejanos un mensaje sobre lo que necesites para responder a la brevedad">
+	<meta name="keywords" content="contacto, mensaje, pedir mate, solicitar mate personalizado">
+
+	<meta property="og:title" content="Contacto">
+	<meta property="og:site_name" content="A-Mates">
+	<meta property="og:url" content="https://ezeledesma.github.io/proyecto-desarrolloweb/pages/contacto.html">
+	<meta property="og:description" content="Dejanos un mensaje sobre lo que necesites para responder a la brevedad.">
+
+	<title>Contacto | A-Mates</title>
 	<link rel="stylesheet" href="../css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
