--- a/pages/historia.html
+++ b/pages/historia.html
@@ -3,7 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Historia</title>
+	<meta name="description" content="Qué corra siempre por nuestras venas el amor por nuestras raíces y nuestra hermosa Argentina.">
+	<meta name="keywords" content="mate argentino, historia mate, tradicion, Argentina">
+
+	<meta property="og:title" content="Historia">
+	<meta property="og:site_name" content="A-Mates">
+	<meta property="og:url" content="https://ezeledesma.github.io/proyecto-desarrolloweb/pages/historia.html">
+	<meta property="og:description" content="Qué corra siempre por nuestras venas el amor por nuestras raíces y nuestra hermosa Argentina.">
+
+	<title>Historia | A-Mates</title>
 	<link rel="stylesheet" href="../css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
