--- a/pages/mates.html
+++ b/pages/mates.html
@@ -3,7 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mates</title>
+	<meta name="description" content="Mates de diferentes capacidades y kits de mates, personalizables.">
+	<meta name="keywords" content="mates, kits, mate madera con bombilla, bombilla colores">
+
+	<meta property="og:title" content="Mates">
+	<meta property="og:site_name" content="A-Mates">
+	<meta property="og:url" content="https://ezeledesma.github.io/proyecto-desarrolloweb/pages/mates.html">
+	<meta property="og:description" content="Mates de diferentes capacidades y kits de mates, personalizables.">
+
+	<title>Mates | A-Mates</title>
+
 	<link rel="stylesheet" href="../css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
