--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -3,7 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tablas</title>
+	<meta name="description" content="Tablas de madera para picadas, cuencos, mates, kits completos.">
+	<meta name="keywords" content="tablas, tablas para picadas, cuencos, kit picada">
+
+	<meta property="og:title" content="Tablas">
+	<meta property="og:site_name" content="A-Mates">
+	<meta property="og:url" content="https://ezeledesma.github.io/proyecto-desarrolloweb/pages/tablas.html">
+	<meta property="og:description" content="Tablas de madera para picadas, cuencos, mates, kits completos.">	
+
+	<title>Tablas | A-Mates</title>
 	<link rel="stylesheet" href="../css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
@@ -23,7 +31,7 @@
 	</header>
 	<main>
 		<div class="contenedor-titulo-tablas">
-			<h2>Tablas</h2>
+			<h2>Tablas | A-Mates</h2>
 		</div>
 		<section class="tablas-info">
 			<div>
