Se agrega responsive design a pages faltantes

--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -31,7 +31,7 @@
 	</header>
 	<main>
 		<div class="contenedor-titulo-tablas">
-			<h2>Tablas | A-Mates</h2>
+			<h2>Tablas</h2>
 		</div>
 		<section class="tablas-info">
 			<div>
@@ -40,11 +40,11 @@
 			</div>
 		</section>
 		<section class="galeria">
-			<button><img src="../assets/anterior.png" alt="Boton previo"></button>
+			<!-- <button><img src="../assets/anterior.png" alt="Boton previo"></button> -->
 			<img src="../assets/tabla-1.jpg" alt="Tabla-1">
 			<img src="../assets/tabla-2.jpg" alt="Tabla-2">
 			<img src="../assets/tabla-3.jpg" alt="Tabla-3">
-			<button><img src="../assets/proximo.png" alt="Boton siguiente"></button>
+			<!-- <button><img src="../assets/proximo.png" alt="Boton siguiente"></button> -->
 		</section>
 	</main>
 	<footer>
