Se agregan favicons

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -12,6 +12,8 @@
 	<meta property="og:description" content="Qué corra siempre por nuestras venas el amor por nuestras raíces y nuestra hermosa Argentina.">
 
 	<title>Historia | A-Mates</title>
+	<link rel="icon" type="image/x-icon" href="../assets/icons/icon_historia.ico">
+
 	<link rel="stylesheet" href="../css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
