--- a/pages/mates.html
+++ b/pages/mates.html
@@ -12,6 +12,7 @@
 	<meta property="og:description" content="Mates de diferentes capacidades y kits de mates, personalizables.">
 
 	<title>Mates | A-Mates</title>
+	<link rel="icon" type="image/x-icon" href="../assets/icons/icon_mate.ico">
 
 	<link rel="stylesheet" href="../css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
