--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -12,6 +12,8 @@
 	<meta property="og:description" content="Tablas de madera para picadas, cuencos, mates, kits completos.">	
 
 	<title>Tablas | A-Mates</title>
+	<link rel="icon" type="image/x-icon" href="../assets/icons/icon_tabla.ico">
+
 	<link rel="stylesheet" href="../css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
