--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<meta property="og:description" content="Pintura artesanal sobre mates. Dibujamos logos, figuras o imagenes personalizadas.">
 
 	<title>A-Mates</title>
+	<link rel="icon" type="image/x-icon" href="./assets/icons/favicon.ico">
 
 	<link rel="stylesheet" href="./css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
