--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,6 +12,8 @@
 	<meta property="og:description" content="Dejanos un mensaje sobre lo que necesites para responder a la brevedad.">
 
 	<title>Contacto | A-Mates</title>
+	<link rel="icon" type="image/x-icon" href="../assets/icons/icon_contacto.ico">
+
 	<link rel="stylesheet" href="../css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
