--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -42,11 +42,9 @@
 			</div>
 		</section>
 		<section class="galeria">
-			<!-- <button><img src="../assets/anterior.png" alt="Boton previo"></button> -->
-			<img src="../assets/tabla-1.jpg" alt="Tabla-1">
-			<img src="../assets/tabla-2.jpg" alt="Tabla-2">
-			<img src="../assets/tabla-3.jpg" alt="Tabla-3">
-			<!-- <button><img src="../assets/proximo.png" alt="Boton siguiente"></button> -->
+			<img class ="tabla-1" src="../assets/tabla-1.jpg" alt="Tabla-1">
+			<img class ="tabla-2" src="../assets/tabla-2.jpg" alt="Tabla-2">
+			<img class ="tabla-3" src="../assets/tabla-3.jpg" alt="Tabla-3">
 		</section>
 	</main>
 	<footer>
